- implement home app bar and home bottom nav bar with single  repo pattern
- Update the applicationId, minSdkVersion, targetSdkVersion, versionCode, and versionName in the app build.gradle file.
- Add imports for home_bottom_nav_bar.dart and home_view_appbar.dart in home_view.dart.
- Update the HomeView class to be a StatefulWidget and add a bottom navigation bar.
- Update the HomeBody class to return a SizedBox widget.
- Import the HomeView class in the main.dart file.
- Update the colorScheme and textTheme in the theme data of the main.dart file.
- Change the home screen to be the HomeView instead of the SplashView.
- Update the sdk version in the pubspec.yaml file.
- Add the .vscode/settings.json file.
- Add the HomeBottomNavBar and HomeViewAppbar widgets.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,15 +20,12 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.chatapp_mentor"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
-    }
+    applicationId = "com.example.chatapp_mentor"
+    minSdkVersion 21 // You can update this as per your app's requirement
+    targetSdkVersion 33 // Update this according to the latest SDK version you're using
+    versionCode 1 // Set the version code
+    versionName "1.0.0" // Set the version name
+}
 
     buildTypes {
         release {
