--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.2.1
   fluttertoast: ^8.2.8
   firebase_core: ^3.4.1
+  firebase_auth:
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
