--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   firebase_core: ^3.4.1
   firebase_auth:
   flutter_bloc: ^8.1.6
+  get_it: ^7.7.0
+  cloud_firestore:
+  firebase_storage:
+  shimmer: ^3.0.0
+  chatview: ^2.2.0
 
 dev_dependencies:
   flutter_test:
