--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   fluttertoast: ^8.2.8
-  firebase_core: ^3.4.1
+  # firebase_core: ^3.4.1
 
 dev_dependencies:
   flutter_test:
